<resources>
    <string name="app_name">Sharity</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="find_center">Find a center nearby</string>
    <string name="select_donations">Select everything you would like to donate</string>
    <string-array name="donation_categories">
        <item>Accessories</item>
        <item>Arts</item>
        <item>Books</item>
        <item>Clothing</item>
        <item>Furniture</item>
        <item>Emergency</item>
        <item>Household</item>
        <item>Hygiene</item>
    </string-array>
    <string name="contact">Contact</string>
    <string name="instructions">How to donate</string>
    <string name="accepted">Accepted Donations</string>
    <string name="cancel">Cancel</string>
    <string name="popular">Trending on Sharity</string>
    <string name="next">Next</string>
    <string name="useExistingLocation">Use existing location: %s</string>
</resources>
