<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/gradient_background"
    android:layout_gravity="fill_horizontal"
    android:padding="8dp">

    <TableRow>
        <ImageButton
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:scaleType="centerInside"
            android:background="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_center"
            android:layout_gravity="center"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:id="@+id/action_bar_back"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/action_bar_forward"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>


    </TableRow>

</TableLayout>