<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_imageview"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/googleg_standard_color_18" />

            <TextView
                android:id="@+id/detail_name_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                android:textSize="@dimen/bold_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_location_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_pin_imageview"
                app:layout_constraintTop_toBottomOf="@id/detail_name_textView" />

            <TextView
                android:id="@+id/detail_hours_textview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_imageview"
                app:layout_constraintTop_toBottomOf="@id/detail_pin_imageview" />

            <ImageView
                android:id="@+id/detail_pin_imageview"
                android:layout_width="@dimen/pin_width"
                android:layout_height="@dimen/pin_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/detail_imageview"
                app:layout_constraintTop_toBottomOf="@id/detail_name_textView"
                app:srcCompat="@drawable/ic_pin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/notes_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="TextView"
            android:textColor="#F44336" />

                <Button
                    android:id="@+id/contact_button"
                    style="@style/collapsableButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/phone_imageview"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/phone_icon" />

                    <ImageView
                        android:id="@+id/mail_imageview"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/phone_imageview"
                        app:srcCompat="@drawable/mail_icon" />

                    <ImageView
                        android:id="@+id/website_imageview"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mail_imageview"
                        app:srcCompat="@drawable/computer_icon" />

                    <TextView
                        android:id="@+id/phoneno_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/phone_imageview"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mail_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/mail_imageview"
                        app:layout_constraintTop_toTopOf="@id/mail_imageview" />

                    <TextView
                        android:id="@+id/website_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/website_imageview"
                        app:layout_constraintTop_toBottomOf="@id/mail_textview" />

                    <TextView
                        android:id="@+id/open_status_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Open Now"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/website_textview" />

                    <TextView
                        android:id="@+id/opening_hours_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/open_status_textView"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/website_imageview" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/instructions_button"
                    style="@style/collapsableButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/instructions" />

                <Button
                    android:id="@+id/accepted_button"
                    style="@style/collapsableButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accepted" />

        <TextView
            android:id="@+id/accepted_items_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8pt"
            android:text="TextView" />

    </LinearLayout>
</ScrollView>